Fix retried optimization and add more vector backup tests [AI-148] [AI-149] (#3428)
Hazelcast retries invocation on a few occasions, eg. when partition is
migrating, member is leaving or [the target is
dead](https://github.com/hazelcast/hazelcast-mono/blob/d82cbc0b3c9aba09b327e04c5189d2f574b952f2/hazelcast/hazelcast/src/main/java/com/hazelcast/spi/impl/operationservice/impl/Invocation.java#L510).
Mechanisms preventing multiple retries scheduled due to different
reasons seem not to exist - many retries can be scheduled. Due to that
mutating operations ideally should be idempotent and be able to handle
concurrent executions if they are offloaded.

`VectorCollection.optimizeAsync` did not meet these criteria and as a
result would sometimes fail in member bouncing tests because 2 retries
of the same optimization were executed at the same time in the following
way:

1. first retry locks the index on partition thread
2. first retry offloads and frees partition thread
3. second retry tries to lock the index on partition thread and fails
because index is already locked
4. second retry sends failure response, which causes entire invocation
to fail
5. first retry completes, unlocks index and sends response which is no
longer waited for

`optimizeAsync` and index locking logic was changed to detect such case
and wait if there are concurrent retires. To recognise retries of the
same optimization `uuid` assigned at the earliest stage when
optimization request is created (in client or in member).

More realistic bouncing tests were added with different setup of
backups, deduplication and single/two-stage search. To save time in new
tests many collections with different setup are created in a single run.
The downside is that there is less concurrency on any single collection,
but they still were sufficient to reproduce problems with `optimize`
retries. More robust and longer tests can be executed as part of soak
tests.

Breaking changes (list specific methods/types/messages):
* se